--- a/proactive-education-assistant/package.json
+++ b/proactive-education-assistant/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
+    "i18next": "^23.11.5",
+    "react-i18next": "^15.5.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
