--- a/proactive-education-assistant/package.json
+++ b/proactive-education-assistant/package.json
@@ -12,9 +12,10 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
     "i18next": "^23.11.5",
-    "react-i18next": "^15.5.1",
+    "lucide-react": "^0.562.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-i18next": "^15.5.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.22.3",
     "tailwindcss": "^4.1.18"
