feat(backend): Add database configuration and MongoDB schema definitions
- Add comprehensive .env.example with database configuration options for PostgreSQL and MongoDB
- Create database connection module supporting PostgreSQL, MongoDB, and in-memory storage
- Implement connection pooling for PostgreSQL with configurable timeout and max connections
- Add MongoDB connection using Mongoose with proper error handling
- Create MongoDB schema definitions for School, User, TeacherRequest, Class, Student, Attendance, Performance, and Dropout models
- Add database indexes for optimized query performance on frequently searched fields
- Implement graceful database connection cleanup on process termination (SIGINT/SIGTERM)
- Support flexible database selection via DB_TYPE environment variable
- Add pre-save hooks to automatically update timestamps on schema modifications

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,17 @@
 PORT=5000
 JWT_SECRET=your_jwt_secret_key_here_change_in_production
 NODE_ENV=development
+
+# Database Configuration
+# Options: 'memory', 'postgres', 'mongodb'
+DB_TYPE=memory
+
+# PostgreSQL Configuration (if using postgres)
+DB_HOST=localhost
+DB_PORT=5432
+DB_NAME=education_assistant
+DB_USER=postgres
+DB_PASSWORD=your_postgres_password
+
+# MongoDB Configuration (if using mongodb)
+MONGODB_URI=mongodb://localhost:27017/education_assistant
