--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,4 +1,18 @@
+# Dependencies
 node_modules/
+
+# Environment variables
 .env
+
+# Database file
+storage/*.db
+storage/*.db-shm
+storage/*.db-wal
+
+# Logs
 *.log
+npm-debug.log*
+
+# OS files
 .DS_Store
+Thumbs.db
