--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,8 @@
     "jsonwebtoken": "^9.0.2",
     "dotenv": "^16.3.1",
     "pg": "^8.11.3",
-    "mongoose": "^8.0.3"
+    "mongoose": "^8.0.3",
+    "better-sqlite3": "^9.2.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
