--- a/proactive-education-assistant/package.json
+++ b/proactive-education-assistant/package.json
@@ -13,13 +13,15 @@
     "@tailwindcss/vite": "^4.1.18",
     "i18next": "^23.11.5",
     "lucide-react": "^0.562.0",
+    "papaparse": "^5.5.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-i18next": "^15.5.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.22.3",
     "recharts": "^3.7.0",
-    "tailwindcss": "^4.1.18"
+    "tailwindcss": "^4.1.18",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
