--- a/backend/package.json
+++ b/backend/package.json
@@ -8,18 +8,23 @@
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
-  "keywords": ["education", "authentication", "express"],
+  "keywords": [
+    "education",
+    "authentication",
+    "express"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
     "bcrypt": "^5.1.1",
-    "jsonwebtoken": "^9.0.2",
+    "bcryptjs": "^3.0.3",
+    "better-sqlite3": "^9.2.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "pg": "^8.11.3",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
-    "better-sqlite3": "^9.2.2"
+    "pg": "^8.11.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
