--- a/backend/.env.example
+++ b/backend/.env.example
@@ -18,3 +18,6 @@ DB_PASSWORD=Q4eDeg5JzN0hw2Xd
 
 # MongoDB Configuration (if using mongodb)
 MONGODB_URI=mongodb://localhost:27017/education_assistant
+
+# ML Service Configuration (NEW - for Dropout Prediction System)
+ML_SERVICE_URL=http://localhost:5001
