--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
     "multer": "^2.0.2",
+    "nanoid": "^5.1.6",
     "node-fetch": "^3.3.2",
     "pg": "^8.11.3",
     "xlsx": "^0.18.5"
