--- a/proactive-education-assistant/package.json
+++ b/proactive-education-assistant/package.json
@@ -33,6 +33,10 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
-    "vite": "^7.2.4"
+    "idb-keyval": "^6.2.2",
+    "localforage": "^1.10.0",
+    "vite": "^7.2.4",
+    "vite-plugin-pwa": "^1.2.0",
+    "workbox-window": "^7.4.0"
   }
 }
