--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.13.5",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.3",
     "better-sqlite3": "^9.2.2",
