--- a/ml-service/requirements.txt
+++ b/ml-service/requirements.txt
@@ -1,9 +1,10 @@
 flask==3.0.0
 flask-cors==4.0.0
-numpy==1.24.3
-pandas==2.0.3
-scikit-learn==1.3.0
-joblib==1.3.2
-google-generativeai==0.3.1
-python-dotenv==1.0.0
-gunicorn==21.2.0
+numpy>=1.24.0,<2.0.0
+pandas>=2.0.0,<3.0.0
+scikit-learn>=1.3.0,<2.0.0
+joblib>=1.3.0
+google-generativeai>=0.3.0
+python-dotenv>=1.0.0
+gunicorn>=21.0.0
+setuptools>=65.0.0
