--- a/render.yaml
+++ b/render.yaml
@@ -33,9 +33,19 @@ services:
       - key: ML_SERVICE_URL
         value: http://localhost:5001
       - key: DATABASE_URL
-        sync: false
+        value: postgresql://postgres.dbxuyimhcraccwsslkey:uHzPV7WLRRQoBfvs@aws-0-ap-northeast-2.pooler.supabase.com:6543/postgres
       - key: JWT_SECRET
-        generateValue: true
+        value: your_jwt_secret_key_here_change_in_production_render_deployment
+      - key: DB_HOST
+        value: aws-0-ap-northeast-2.pooler.supabase.com
+      - key: DB_PORT
+        value: 6543
+      - key: DB_NAME
+        value: postgres
+      - key: DB_USER
+        value: postgres
+      - key: DB_PASSWORD
+        value: uHzPV7WLRRQoBfvs
       - key: GEMINI_API_KEY
         sync: false
     healthCheckPath: /api/health
