--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,9 +3,43 @@ JWT_SECRET=your_jwt_secret_key_here_change_in_production
 NODE_ENV=development
 
 # Database Configuration
-# Options: 'memory', 'postgres', 'mongodb'
+# Options: 'memory', 'sqlite', 'postgres', 'mongodb'
 DB_TYPE=postgres
 
+# SQLite Configuration (for offline-first mobile app)
+SQLITE_DB_PATH=./storage/education_assistant.db
+
+# Supabase PostgreSQL Configuration (for production)
+# Get these from your Supabase project settings → Database → Connection Pooling
+DATABASE_URL=postgresql://postgres.[PROJECT-REF]:[PASSWORD]@[HOST]:6543/postgres
+DB_HOST=aws-0-ap-south-1.pooler.supabase.com
+DB_PORT=6543
+DB_NAME=postgres
+DB_USER=postgres
+DB_PASSWORD=your_supabase_password
+
+# MongoDB Configuration (if using mongodb)
+MONGODB_URI=mongodb://localhost:27017/education_assistant
+
+# ML Service Configuration (for Dropout Prediction System)
+# Local: http://localhost:5001
+# Production: https://your-ml-service.onrender.com
+ML_SERVICE_URL=http://localhost:5001
+
+
+
+
+
+
+
+
+
+
+
+
+#Backup Database
+
+#*********************************************************************
 # Supabase PostgreSQL Configuration
 # SupaBase Devlopment 
 #DATABASE_URL=postgresql://postgres:Q4eDeg5JzN0hw2Xd@db.hnagdrznmhzargixwxaz.supabase.co:5432/postgres
@@ -16,21 +50,3 @@ DB_TYPE=postgres
 #DB_NAME=postgres
 #DB_USER=postgres
 #DB_PASSWORD=Q4eDeg5JzN0hw2Xd
-
-
-#Supabase Testing 
-#DATABASE_URL=postgresql://postgres.dbxuyimhcraccwsslkey:[YOUR-PASSWORD]@aws-1-ap-northeast-2.pooler.supabase.com:6543/postgres
-DATABASE_URL=postgresql://postgres.dbxuyimhcraccwsslkey:uHzPV7WLRRQoBfvs@aws-1-ap-northeast-2.pooler.supabase.com:6543/postgres
-# Alternative: Individual connection parameters
-DB_HOST=aws-1-ap-northeast-2.pooler.supabase.com
-DB_PORT=6543
-DB_NAME=postgres
-DB_USER=postgres
-DB_PASSWORD=uHzPV7WLRRQoBfvs
-
-
-# MongoDB Configuration (if using mongodb)
-MONGODB_URI=mongodb://localhost:27017/education_assistant
-
-# ML Service Configuration (NEW - for Dropout Prediction System)
-ML_SERVICE_URL=http://localhost:5001
