--- a/ml-service/.env.example
+++ b/ml-service/.env.example
@@ -1,3 +1,7 @@
-GEMINI_API_KEY=AIzaSyAwUzleAipm7HKOS-RGw_nJAOKHGh8iKjE
-FLASK_PORT=5001
+# Flask Configuration
 FLASK_ENV=development
+FLASK_PORT=5001
+
+# Gemini AI Configuration (Optional - for AI-powered explanations)
+# Get your API key from: https://makersuite.google.com/app/apikey
+GEMINI_API_KEY=AIzaSyAwUzleAipm7HKOS-RGw_nJAOKHGh8iKjE
