--- a/proactive-education-assistant/.env.example
+++ b/proactive-education-assistant/.env.example
@@ -1,1 +1,9 @@
-VITE_API_URL=http://localhost:5000/api
+# Backend API Configuration
+# Local: http://localhost:5000/api (auto-detected)
+# Production: https://your-backend.onrender.com/api (fallback)
+VITE_API_URL=https://your-backend.onrender.com/api
+
+# ML Service Configuration (optional - backend handles this)
+# Local: http://localhost:5001 (auto-detected)
+# Production: https://your-ml-service.onrender.com (fallback)
+VITE_ML_URL=https://your-ml-service.onrender.com
