--- a/proactive-education-assistant/.env.example
+++ b/proactive-education-assistant/.env.example
@@ -1,9 +1,9 @@
 # Backend API Configuration
 # Local: http://localhost:5000/api (auto-detected)
-# Production: https://your-backend.onrender.com/api (fallback)
-VITE_API_URL=https://your-backend.onrender.com/api
+# Production: https://student-dropout-backend-032b.onrender.com/api (fallback)
+VITE_API_URL=https://student-dropout-backend-032b.onrender.com/api
 
 # ML Service Configuration (optional - backend handles this)
 # Local: http://localhost:5001 (auto-detected)
-# Production: https://your-ml-service.onrender.com (fallback)
-VITE_ML_URL=https://your-ml-service.onrender.com
+# Production: https://student-dropout-1-dzck.onrender.com (fallback)
+VITE_ML_URL=https://student-dropout-1-dzck.onrender.com
