AI Assistant and Data Quality suggestion added

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -24,3 +24,9 @@ MONGODB_URI=mongodb://localhost:27017/education_assistant
 # Local: http://localhost:5001
 # Production: https://student-dropout-1-dzck.onrender.com
 ML_SERVICE_URL=http://localhost:5001
+
+# Google Gemini API Configuration (for AI Assistant)
+GEMINI_API_KEY=IzaSyAwUzleAipm7HKOS-RGw_nJAOKHGh8iKjE
+
+# Groq API Configuration (for General Chat Assistant)
+GROQ_API_KEY=your_groq_api_key_here
