interventions - email etc

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -24,3 +24,9 @@ MONGODB_URI=mongodb://localhost:27017/education_assistant
 # Local: http://localhost:5001
 # Production: https://student-dropout-1-dzck.onrender.com
 ML_SERVICE_URL=http://localhost:5001
+
+# Resend Email Configuration (for intervention emails)
+RESEND_API_KEY=re_43XMsZbB_56JTDk6gwF4zBZRowgzoxbxb
+RESEND_FROM_EMAIL=onboarding@resend.dev
+
+
