whatsapp sms and email etc updated

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -29,6 +29,13 @@ ML_SERVICE_URL=http://localhost:5001
 RESEND_API_KEY=re_43XMsZbB_56JTDk6gwF4zBZRowgzoxbxb
 RESEND_FROM_EMAIL=onboarding@resend.dev
 
+# Twilio WhatsApp Sandbox Configuration
+# Example sandbox sender: whatsapp:+14155238886
+TWILIO_ACCOUNT_SID=ACbbff41edbf8b5be8003967323b264267
+TWILIO_AUTH_TOKEN=ec55eee357c6403ecdee03c472ddb56e
+TWILIO_WHATSAPP_FROM_NUMBER=whatsapp:+14155238886
+
+
 # Google Gemini API Configuration (for AI Assistant)
 GEMINI_API_KEY=IzaSyAwUzleAipm7HKOS-RGw_nJAOKHGh8iKjE
 
