--- a/backend/package.json
+++ b/backend/package.json
@@ -34,6 +34,7 @@
     "node-fetch": "^3.3.2",
     "pg": "^8.11.3",
     "resend": "^6.9.3",
+    "twilio": "^5.12.2",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
